fix spell prep overflow, add feather and talon, handle libwrapper patching, stealthy sterisk (#67)

--- a/css/styles.css
+++ b/css/styles.css
@@ -1,6 +1,6 @@
 /* spell preparations styles */
 .dnd5e2.sheet.actor.character .tab.spells .top > .card {
-    width: 270px;
+    width: 270px !important;
 }
 
 /* item restore app styles */
